Cart with quantities - implementation